<resources>
    <string name="app_name">Godamy</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign IN</string>
    <string name="don_t_have_an_account">Don\'t Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_in_with_email">Sign In With Email</string>
    <string name="sign_in_with_phone">Sign In With Phone</string>
    <string name="enter_a_unique_username">Enter a unique username</string>
    <string name="next">Next</string>
    <string name="web_client_id">839183299049-6l17tepstccm12beev7t1c230brik06k.apps.googleusercontent.com</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_your_phone_number_using_the_code_sent_to_you">Verify your phone number using the code sent to you in SMS</string>
    <string name="verification_code">Verification Code</string>
    <string name="submit">Submit</string>
    <string name="verify">Verify</string>
    <string name="modify_phone_number">Modify Phone Number</string>
    <string name="wrong_number_n_click_to_modify_the_phone_number">Wrong Number?\n <u>Click to modify the phone number</u></string>
    <string name="please_wait_sending_you_an_sms">Please wait, sending you an SMS</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your Full name</string>
    <string name="username_is_taken_please_use_n_another_username">Username is taken please Use \n another username</string>
    <string name="_0">0</string>
    <string name="next_question"><b>next</b></string>
    <string name="hi">Hi 👋🏻, %1$s</string>
    <string name="submitAudio">Submit</string>
    <string name="are_you_sure_you_want_to_exit_the_quiz">Are you Sure you want to exit the quiz?</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="rank">RANK</string>
    <string name="username_rankings">USERNAME</string>
    <string name="score">SCORE</string>
    <string name="your_score">Your Score</string>
    <string name="go_to_homepage">go back</string>
    <string name="enter_the_password_for_this_quiz">Enter the password for this quiz</string>
    <string name="contact_admins_to_get_the_password">Note : contact admins to get the password</string>
    <string name="cancel">cancel</string>
    <string name="access_quiz">Enter quiz</string>
    <string name="wrong_password">Wrong password</string>
    <string name="your_score_number">Your SCORE</string>
</resources>