<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/DarkYellowtheme"
    android:padding="7.7dp"
    >
    <TextView
        android:textAlignment="center"
        android:text="@string/enter_the_password_for_this_quiz"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:layout_margin = "10dp"/>
    <TextView
        android:textAlignment="center"
        android:text="@string/contact_admins_to_get_the_password"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin = "10dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/cancel"
        android:backgroundTint="@color/LightGreentheme"
        />
        <Button
            android:id="@+id/check"
            android:text="@string/access_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin = "10dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/LightGreentheme"
            android:layout_weight="1"
            />
    </LinearLayout>

</LinearLayout></layout>