<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Phone"
    android:background="@color/Bg"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phone_number"
        android:textSize="23sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:id="@+id/enterPhoneText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHighlight="@color/black"

        app:layout_constraintBottom_toTopOf="@id/submitPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterPhoneText" />
    <Button
        android:id="@+id/submitPhone"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/phone"
        app:layout_constraintBottom_toTopOf="@id/verificationSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/verificationSection"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/submitPhone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:id="@+id/modify"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_marginTop="60dp"

            android:layout_marginBottom="20dp"
            android:text="@string/wrong_number_n_click_to_modify_the_phone_number"/>
        <TextView
            android:layout_width="match_parent"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:layout_height="wrap_content"
            android:background="@color/LightGreentheme"
            android:text="@string/verify_your_phone_number_using_the_code_sent_to_you"
            android:textSize="19sp"
            android:textAlignment="center"
            android:textColor="@color/black"

            />

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/verification_code"
            android:inputType="number"


            android:minHeight="48dp" />
    <Button
        android:id="@+id/verifiyCode"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:text="@string/verify"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_error"/></LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout></layout>