<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/DarkYellowtheme"

        >

    <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
        android:textColor="@color/black"
            android:text="@string/are_you_sure_you_want_to_exit_the_quiz"
            android:layout_marginStart="16dp" />
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_marginTop="15dp"
       >
    <Button
        android:id="@+id/ja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/yes"
        android:layout_marginEnd="18dp"/>
       <Button
           android:id="@+id/nein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
           android:layout_marginStart="18dp"
            android:text="@string/no"/>
   </LinearLayout>
    </LinearLayout></layout>