<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Username"
    android:background="@color/Bg"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"

    >

    <TextView
        android:id="@+id/eun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_a_unique_username"
        android:textAlignment="center"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/username"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz_1234567890"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:inputType="textFilter"
        android:minHeight="48dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/used_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eun" />
    <TextView
        android:id="@+id/used_username"
        android:layout_marginTop="50dp"
        android:textColor="#ff0000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"

        android:textSize="20sp"
        android:text="@string/username_is_taken_please_use_n_another_username"
        android:visibility="invisible"
        tools:visibility="visible"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/efn"
        android:text="@string/enter_your_full_name"
        android:textAlignment="center"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/used_username"
        app:layout_constraintBottom_toTopOf="@id/fullName"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="80dp"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/nextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/efn" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="80dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:backgroundTint="@color/design_default_color_error"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/fullName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout></layout>