<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/el7afla"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_gravity="top"
            android:layout_weight="1"
        />
        <nl.dionsegijn.konfetti.xml.KonfettiView
            android:id="@+id/el7afla2"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            /></LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultFragment"



    >

    <TextView
        android:id="@+id/yourScoree"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:text="@string/your_score"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scoree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
<TextView
    android:id="@+id/scoree"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_gravity="center"
    android:textSize="50sp"

    android:layout_marginBottom="69dp"
    tools:text="4/19"
    android:textColor="@color/white"
    android:textColorHighlight="@color/black"
    android:shadowColor="@color/DarkGreentheme"
    android:shadowDx="15"
    android:shadowDy="15"
    android:textAlignment="center"
    app:layout_constraintTop_toBottomOf="@id/yourScoree"
    app:layout_constraintBottom_toTopOf="@id/cardView"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:shadowRadius="14"
    />
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:background="@color/DarkGreentheme"
        android:backgroundTint="@color/DarkGreentheme"
        app:cardCornerRadius="14dp"
        app:layout_constraintTop_toBottomOf="@id/scoree"
        app:layout_constraintBottom_toTopOf="@id/goMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="30dp"
                  android:layout_marginTop="4dp"
                  android:text = "@string/rank"
                  android:textColor="@color/white"
                  android:layout_weight="1"
                  />
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textAlignment="center"
                  android:layout_weight="2"
                  android:layout_marginTop="4dp"
                  android:text = "@string/username_rankings"
                  android:textColor="@color/white"
                  />
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:layout_marginTop="4dp"
                  android:text = "@string/score"
                  android:textColor="@color/white"
                  android:textAlignment="textEnd"
                  android:layout_marginEnd="20dp"
                  />
          </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rankings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="7dp"
            tools:listitem="@layout/user_ranking"
            android:background="@color/DarkGreentheme"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/goMain"
        android:layout_marginTop="30dp"
        android:text="@string/go_to_homepage"
        android:layout_width="match_parent"
        android:backgroundTint="@color/LightGreentheme"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout></FrameLayout></layout>